fixed overflow in mobile view

--- a/style/style.css
+++ b/style/style.css
@@ -303,9 +303,9 @@ footer {
         justify-content: space-evenly;
         background: #fa5555;
         position: absolute;
-        width: 100vw;
+        width: 100%;
         height: 100vh;
-        left: -5vw;
+        left: 0;
         top: 0;
         transform: translateY(-100%);
         transition: ease 500ms all;
